--- a/Core/ToDoList/ToDoListLib.vcxproj.filters
+++ b/Core/ToDoList/ToDoListLib.vcxproj.filters
@@ -2,11 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
-      <UniqueIdentifier>{f84ecc6b-6fe3-4b8a-bdeb-dc1baa6601d0}</UniqueIdentifier>
+      <UniqueIdentifier>{2eb9fad2-1b20-4317-b60c-66c3cb8e5bc9}</UniqueIdentifier>
       <Extensions>cpp;c;cxx;rc;def;r;odl;idl;hpj;bat</Extensions>
     </Filter>
     <Filter Include="Header Files">
-      <UniqueIdentifier>{dd0d27c6-1696-43b9-82aa-8ecbf0209ec3}</UniqueIdentifier>
+      <UniqueIdentifier>{56305c51-93fc-4fd9-b4e4-234ada11bf14}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl</Extensions>
     </Filter>
   </ItemGroup>
@@ -873,6 +873,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <CustomBuild Include="ToDoListLib.vcxproj" />
     <CustomBuild Include="ToDoListLib.vcxproj.filters" />
   </ItemGroup>
 </Project>
