Move static lib to own folder to stop perpetual rebuilding

--- a/Core/TDLTest/TDLTest.vcxproj
+++ b/Core/TDLTest/TDLTest.vcxproj
@@ -217,8 +217,8 @@ copy unicode_debug\TDLTest.exe ..\todolist\unicode_debug /y
     <ProjectReference Include="..\Shared\Shared.vcxproj">
       <Project>{95605899-9c90-40d8-8774-d1da1fce7464}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\ToDoList\ToDoListLib.vcxproj">
-      <Project>{6b012c16-664f-37cc-bb2f-0be146c03b12}</Project>
+    <ProjectReference Include="..\ToDoListLib\ToDoListLib.vcxproj">
+      <Project>{940be78e-1486-7f9b-02b3-6f0113741a6a}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
