Add support for '@' to popup 'people' list

--- a/Core/ToDoListLib/ToDoListLib.vcxproj
+++ b/Core/ToDoListLib/ToDoListLib.vcxproj
@@ -218,6 +218,7 @@
     <ClCompile Include="..\ToDoList\TDLSendTasksDlg.cpp" />
     <ClCompile Include="..\ToDoList\TDLSetReminderDlg.cpp" />
     <ClCompile Include="..\ToDoList\TDLShowReminderDlg.cpp" />
+    <ClCompile Include="..\ToDoList\TDLSimpleTextContentCtrl.cpp" />
     <ClCompile Include="..\ToDoList\TDLStylesheetParamConfigDlg.cpp" />
     <ClCompile Include="..\ToDoList\TDLTaskCtrlBase.cpp" />
     <ClCompile Include="..\ToDoList\TDLTaskIconDlg.cpp" />
@@ -365,6 +366,7 @@
     <ClInclude Include="..\ToDoList\TDLSendTasksDlg.h" />
     <ClInclude Include="..\ToDoList\TDLSetReminderDlg.h" />
     <ClInclude Include="..\ToDoList\TDLShowReminderDlg.h" />
+    <ClInclude Include="..\ToDoList\TDLSimpleTextContentCtrl.h" />
     <ClInclude Include="..\ToDoList\TDLStylesheetParamConfigDlg.h" />
     <ClInclude Include="..\ToDoList\TDLTaskCtrlBase.h" />
     <ClInclude Include="..\ToDoList\TDLTaskIconDlg.h" />
