--- a/Core/ToDoListLib/ToDoListLib.vcxproj.filters
+++ b/Core/ToDoListLib/ToDoListLib.vcxproj.filters
@@ -425,6 +425,9 @@
     <ClCompile Include="..\ToDoList\ToDoListWnd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\ToDoList\TDLSimpleTextContentCtrl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\ToDoList\FilteredToDoCtrl.h">
@@ -866,6 +869,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\ToDoList\ToDoListWnd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ToDoList\TDLSimpleTextContentCtrl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
