--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -1507,7 +1507,7 @@ BEGIN
 END
 
 IDD_TDLIMPORTEXPORT_DIALOG DIALOGEX 0, 0, 400, 289
-STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Import Tasks from Tasklist"
 FONT 8, "Tahoma"
 BEGIN
