--- a/Plugins/3rdParty/ReoGrid/ReoGrid.csproj
+++ b/Plugins/3rdParty/ReoGrid/ReoGrid.csproj
@@ -157,25 +157,11 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Antlr3.Runtime" Condition=" '$(Configuration)|$(Platform)' == 'Extension|AnyCPU' ">
-      <HintPath>..\Ref\Antlr3.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Antlr3.Runtime" Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-      <HintPath>..\Ref\Antlr3.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Antlr3.Runtime" Condition=" '$(Configuration)|$(Platform)' == 'WPFExtension|AnyCPU' ">
-      <HintPath>..\Ref\Antlr3.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Mono.Android" Condition=" '$(Configuration)|$(Platform)' == 'DebugAndroid|AnyCPU' ">
-      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\MonoAndroid\v4.0.3\Mono.Android.dll</HintPath>
-    </Reference>
-    <Reference Include="PresentationCore" Condition=" '$(Configuration)|$(Platform)' == 'WPFDebug|AnyCPU' " />
     <Reference Include="PresentationCore" Condition=" '$(Configuration)|$(Platform)' == 'WPFMinimum|AnyCPU' " />
     <Reference Include="PresentationCore" Condition=" '$(Configuration)|$(Platform)' == 'WPFRelease|AnyCPU' " />
     <Reference Include="PresentationCore" Condition=" '$(Configuration)|$(Platform)' == 'WPFReleasePro|AnyCPU' " />
     <Reference Include="PresentationCore" Condition=" '$(Configuration)|$(Platform)' == 'WPFExtension|AnyCPU' " />
     <Reference Include="PresentationCore" Condition=" '$(Configuration)|$(Platform)' == 'WPFExtensionPro|AnyCPU' " />
-    <Reference Include="PresentationFramework" Condition=" '$(Configuration)|$(Platform)' == 'WPFDebug|AnyCPU' " />
     <Reference Include="PresentationFramework" Condition=" '$(Configuration)|$(Platform)' == 'WPFMinimum|AnyCPU' " />
     <Reference Include="PresentationFramework" Condition=" '$(Configuration)|$(Platform)' == 'WPFRelease|AnyCPU' " />
     <Reference Include="PresentationFramework" Condition=" '$(Configuration)|$(Platform)' == 'WPFReleasePro|AnyCPU' " />
@@ -186,7 +172,6 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Design" />
     <Reference Include="System.Drawing" Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' " />
     <Reference Include="System.Drawing" Condition=" '$(Configuration)|$(Platform)' == 'DebugPro|AnyCPU' " />
     <Reference Include="System.Drawing" Condition=" '$(Configuration)|$(Platform)' == 'Minimum|AnyCPU' " />
@@ -201,8 +186,6 @@
     <Reference Include="System.Drawing" Condition=" '$(Configuration)|$(Platform)' == 'WPFExtension|AnyCPU' " />
     <Reference Include="System.Drawing" Condition=" '$(Configuration)|$(Platform)' == 'WPFExtensionPro|AnyCPU' " />
     <Reference Include="System.Printing" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Workflow.ComponentModel" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -215,15 +198,6 @@
     <Reference Include="System.Windows.Forms" Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' " />
     <Reference Include="System.Windows.Forms" Condition=" '$(Configuration)|$(Platform)' == 'ReleasePro|AnyCPU' " />
     <Reference Include="System.Xml" />
-    <Reference Include="unvell.ReoScript" Condition=" '$(Configuration)|$(Platform)' == 'Extension|AnyCPU' ">
-      <HintPath>..\Ref\unvell.ReoScript.dll</HintPath>
-    </Reference>
-    <Reference Include="unvell.ReoScript" Condition=" '$(Configuration)|$(Platform)' == 'WPFExtension|AnyCPU' ">
-      <HintPath>..\Ref\unvell.ReoScript.dll</HintPath>
-    </Reference>
-    <Reference Include="unvell.ReoScript">
-      <HintPath>..\Ref\unvell.ReoScript.dll</HintPath>
-    </Reference>
     <Reference Include="WindowsBase" Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' " />
     <Reference Include="WindowsBase" Condition=" '$(Configuration)|$(Platform)' == 'DebugPro|AnyCPU' " />
     <Reference Include="WindowsBase" Condition=" '$(Configuration)|$(Platform)' == 'Minimum|AnyCPU' " />
@@ -237,9 +211,6 @@
     <Reference Include="WindowsBase" Condition=" '$(Configuration)|$(Platform)' == 'WPFReleasePro|AnyCPU' " />
     <Reference Include="WindowsBase" Condition=" '$(Configuration)|$(Platform)' == 'WPFExtension|AnyCPU' " />
     <Reference Include="WindowsBase" Condition=" '$(Configuration)|$(Platform)' == 'WPFExtensionPro|AnyCPU' " />
-    <Reference Include="Xamarin.iOS" Condition=" '$(Configuration)|$(Platform)' == 'DebugiOS|AnyCPU' ">
-      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\Xamarin.iOS\v1.0\Xamarin.iOS.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions\AddOutlineAction.cs" />
@@ -399,12 +370,6 @@
     <Compile Include="Actions\RemoveRangeStyleAction.cs" />
     <Compile Include="Actions\StepRangeFontSizeAction.cs" />
     <Compile Include="Actions\RemoveRowsAction.cs" />
-    <Compile Include="Test\RichTextTestForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Test\RichTextTestForm.Designer.cs">
-      <DependentUpon>RichTextTestForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Utility\FileUtility.cs" />
     <Compile Include="Utility\LangUtility.cs" />
     <Compile Include="Utility\MeasureToolkit.cs" />
@@ -530,9 +495,6 @@
     <Compile Include="Zip\ZipOutputStream.cs" />
     <Compile Include="Zip\ZipSegmentedStream.cs" />
     <Compile Include="Zip\Zlib.cs" />
-    <EmbeddedResource Include="Test\RichTextTestForm.resx">
-      <DependentUpon>RichTextTestForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="WinForm\AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -635,7 +597,9 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Test\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
