--- a/Plugins/3rdParty/ReoGrid/ReoGrid.csproj
+++ b/Plugins/3rdParty/ReoGrid/ReoGrid.csproj
@@ -437,9 +437,7 @@
     <Compile Include="Views\CellsViewport.cs" />
     <Compile Include="WinForm\Graphics.cs" />
     <Compile Include="Views\NormalViewportController.cs" />
-    <Compile Include="WinForm\FormulaParserForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="WinForm\FormulaParserForm.cs" />
     <Compile Include="WinForm\FormulaParserForm.designer.cs">
       <DependentUpon>FormulaParserForm.cs</DependentUpon>
     </Compile>
